--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <script type="module" src="./js/supabaseClient.js"></script>
+    <script type="module" src="./js/auth.js"></script>
 </head>
 <body>
     <header class="dashboard-header">
@@ -264,8 +265,18 @@
             });
         </script>
         <script type="module">
+            import { checkAuth, logout } from './js/auth.js';
             import { supabase } from './js/supabaseClient.js';
 
+            // Verifica autenticazione all'avvio
+            document.addEventListener('DOMContentLoaded', async () => {
+                if (!await checkAuth()) return;
+                // ...resto del codice esistente...
+            });
+
+            // Gestione logout
+            document.getElementById('logout-button').addEventListener('click', logout);
+            
             // Rendi globale l'oggetto supabase
             window.supabase = supabase;
 
