--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <script type="module" src="./js/supabaseClient.js"></script>
     <script type="module" src="./js/auth.js"></script>
+    <base href="/sito-sabrina/">
+    <script>
+        // Verifica se l'utente è autenticato
+        if (!localStorage.getItem('supabase.auth.token')) {
+            window.location.href = './login.html';
+        }
+    </script>
 </head>
 <body>
     <header class="dashboard-header">
