--- a/404.html
+++ b/404.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <title>Reindirizzamento...</title>
     <script>
-        // Reindirizza alla home se la pagina non viene trovata
-        window.location.href = './index.html';
+        // Se si sta cercando di accedere alla dashboard, reindirizza al login
+        if (window.location.href.includes('dashboard')) {
+            window.location.href = './login.html';
+        } else {
+            // Altrimenti reindirizza alla home
+            window.location.href = './index.html';
+        }
     </script>
 </head>
 <body>
