--- a/404.html
+++ b/404.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Reindirizzamento...</title>
+    <base href="/sito-sabrina/">
     <script>
-        // Se si sta cercando di accedere alla dashboard, reindirizza al login
-        if (window.location.href.includes('dashboard')) {
-            window.location.href = './login.html';
+        if (window.location.pathname.includes('dashboard')) {
+            window.location.href = '/sito-sabrina/login.html';
         } else {
-            // Altrimenti reindirizza alla home
-            window.location.href = './index.html';
+            window.location.href = '/sito-sabrina/index.html';
         }
     </script>
 </head>
