Fix percorsi login e Supabase client

--- a/login.html
+++ b/login.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Dashboard</title>
-    <base href="/sito-sabrina/">
-    <link rel="stylesheet" href="css/dashboard.css">
-    <script type="module" src="js/supabaseClient.js"></script>
+    <link rel="stylesheet" href="./css/dashboard.css">
+    <script type="module" src="./js/supabaseClient.js"></script>
 </head>
 <body>
     <div class="login-container">
@@ -32,7 +31,7 @@
         // Check if already logged in
         const session = await supabase.auth.getSession();
         if (session.data.session) {
-            window.location.href = '/sito-sabrina/dashboard.html';
+            window.location.href = 'dashboard.html';
         }
 
         document.getElementById('login-form').addEventListener('submit', async (e) => {
@@ -47,7 +46,7 @@
                 });
 
                 if (error) throw error;
-                window.location.href = '/sito-sabrina/dashboard.html';
+                window.location.href = 'dashboard.html';
             } catch (error) {
                 document.getElementById('error-message').textContent = 'Credenziali non valide';
                 console.error('Errore di login:', error);
