--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 
     <section id="prenotazioni" class="section">
         <h2><i class="fas fa-calendar-check"></i> Prenota un trattamento</h2>
+        <!-- MESSAGGIO SE NON CI SONO DATE -->
+        <div id="no-dates-message" class="no-dates-message" style="display:none;">
+            Al momento non ci sono date disponibili per la prenotazione.
+        </div>
         <form id="booking-form" class="booking-form">
             <label for="name">Nome:</label>
             <input type="text" id="name" name="name" required>
@@ -137,6 +141,20 @@
 
                 const uniqueDates = [...new Set(availability.map(item => item.date))];
                 const dateSelect = document.getElementById('date');
+                const noDatesMsg = document.getElementById('no-dates-message');
+                const bookingForm = document.getElementById('booking-form');
+
+                if (uniqueDates.length === 0) {
+                    // Nessuna data disponibile
+                    if (dateSelect) dateSelect.innerHTML = `<option value="" disabled selected>Nessuna data disponibile</option>`;
+                    if (noDatesMsg) noDatesMsg.style.display = 'block';
+                    if (bookingForm) bookingForm.querySelectorAll('input, select, textarea, button').forEach(el => el.disabled = true);
+                    return;
+                } else {
+                    if (noDatesMsg) noDatesMsg.style.display = 'none';
+                    if (bookingForm) bookingForm.querySelectorAll('input, select, textarea, button').forEach(el => el.disabled = false);
+                }
+
                 if (dateSelect) {
                     dateSelect.innerHTML = `
                         <option value="" disabled selected>Seleziona una data</option>
